--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 
 {
-      "name": "ƛsτʀ๏ Manager",
+      "name": "King Amda Manager",
       "description": "Telegram group management bot.",
       "logo": "https://telegra.ph/file/0d0394bc5f2ee111b3b4d.jpg",
       "keywords": [
@@ -10,7 +10,7 @@
          "manager",
          "Love"
       ],   
-   "repository": "https://github.com/PsychoBots/Astro-Manager",
+   "repository": "https://github.com/Error404-B/KingAmdaBot",
    "addons": [
       {
          "options": {
